--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -225,6 +225,13 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
   src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=f17863b2-fd53-11f0-ba1b-0e6f42328d7d"
 ></iframe>
 
+<iframe 
+frameborder="0" 
+className="juxtapose" 
+width="100%" 
+height="199" 
+src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=40c85d74-fd58-11f0-ba1b-0e6f42328d7d"></iframe>
+
 </Container>
 
 <Container className="max-w-screen-xl">
