--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -92,128 +92,65 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
 
 ## experimenting with bar graph round 3 
 
-<div style={{ maxWidth: '600px', margin: '40px 0', fontFamily: 'sans-serif' }}>
-  <h3 style={{ fontSize: '1.25rem', fontWeight: 'bold', marginBottom: '24px' }}>Loring Park Demographic Shifts</h3>
-
-  {/* Item 1 */}
-  <div style={{ marginBottom: '20px' }}>
-    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '8px', fontSize: '14px' }}>
-      <span>1960 Population (1,968)</span>
-      <span style={{ fontWeight: 'bold', color: '#2563eb' }}>20%</span>
-    </div>
-    <div style={{ width: '100%', backgroundColor: '#f1f5f9', height: '12px', borderRadius: '10px' }}>
-      <div style={{ width: '20%', backgroundColor: '#3b82f6', height: '100%', borderRadius: '10px' }}></div>
-    </div>
-  </div>
-
-  {/* Item 2 */}
-  <div style={{ marginBottom: '20px' }}>
-    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '8px', fontSize: '14px' }}>
-      <span>Redevelopable Portion (1,000)</span>
-      <span style={{ fontWeight: 'bold', color: '#4f46e5' }}>10%</span>
-    </div>
-    <div style={{ width: '100%', backgroundColor: '#f1f5f9', height: '12px', borderRadius: '10px' }}>
-      <div style={{ width: '10%', backgroundColor: '#6366f1', height: '100%', borderRadius: '10px' }}></div>
-    </div>
-  </div>
-
-  {/* Item 3 */}
-  <div style={{ marginBottom: '20px' }}>
-    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '8px', fontSize: '14px' }}>
-      <span>2020 Population (9,718)</span>
-      <span style={{ fontWeight: 'bold', color: '#059669' }}>100%</span>
-    </div>
-    <div style={{ width: '100%', backgroundColor: '#f1f5f9', height: '12px', borderRadius: '10px' }}>
-      <div style={{ width: '100%', backgroundColor: '#10b981', height: '100%', borderRadius: '10px' }}></div>
-    </div>
-  </div>
-
-  <p style={{ fontSize: '12px', color: '#64748b', fontStyle: 'italic', marginTop: '16px' }}>Source: EIS Document & Wikipedia</p>
-</div>
-
-## Experimenting with bar graphs round 4
-
-<div style={{ margin: '40px 0', fontFamily: 'sans-serif' }}>
-  <h3 style={{ fontSize: '1.25rem', fontWeight: 'bold', marginBottom: '30px' }}>
-    Loring Park: 60 Years of Population Growth
+<div style={{ margin: '60px 0', fontFamily: 'sans-serif' }}>
+  <h3 style={{ fontSize: '1.25rem', fontWeight: 'bold', marginBottom: '40px' }}>
+    Loring Park demographics
   </h3>
 
-  {/* Graph Container */}
+  {/* Graph Container with a defined height */}
   <div style={{ 
     display: 'flex', 
     alignItems: 'flex-end', 
-    height: '300px', 
-    gap: '15px', 
+    height: '200px', 
+    gap: '20px', 
     borderBottom: '2px solid #cbd5e1',
-    paddingBottom: '5px'
+    paddingBottom: '10px',
+    maxWidth: '600px'
   }}>
     
-    {/* 1960: 1,968 (approx 20% of max) */}
+    {/* 1960: 1,968 (40px) */}
     <div style={{ flex: 1, display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
-      <span style={{ fontSize: '10px', fontWeight: 'bold', marginBottom: '4px' }}>1,968</span>
-      <div style={{ width: '100%', backgroundColor: '#60a5fa', height: '20%', borderRadius: '4px 4px 0 0' }}></div>
+      <span style={{ fontSize: '11px', fontWeight: 'bold', marginBottom: '5px' }}>1,968</span>
+      <div style={{ width: '100%', backgroundColor: '#3b82f6', height: '40px', borderRadius: '4px 4px 0 0' }}></div>
       <span style={{ fontSize: '12px', marginTop: '8px' }}>1960</span>
     </div>
 
-    {/* 1970 Total: 1,387 (approx 14% of max) */}
+    {/* 1970 Total: 1,387 (28px) */}
     <div style={{ flex: 1, display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
-      <span style={{ fontSize: '10px', fontWeight: 'bold', marginBottom: '4px' }}>1,387</span>
-      <div style={{ width: '100%', backgroundColor: '#3b82f6', height: '14%', borderRadius: '4px 4px 0 0' }}></div>
+      <span style={{ fontSize: '11px', fontWeight: 'bold', marginBottom: '5px' }}>1,387</span>
+      <div style={{ width: '100%', backgroundColor: '#2563eb', height: '28px', borderRadius: '4px 4px 0 0' }}></div>
       <span style={{ fontSize: '12px', marginTop: '8px' }}>1970</span>
     </div>
 
-    {/* 1970 Redevelopable: 1,000 (approx 10% of max) */}
+    {/* 1970 Redevelopable: 1,000 (20px) */}
     <div style={{ flex: 1, display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
-      <span style={{ fontSize: '10px', fontWeight: 'bold', marginBottom: '4px' }}>1,000*</span>
-      <div style={{ width: '100%', backgroundColor: '#2563eb', height: '10%', borderRadius: '4px 4px 0 0' }}></div>
+      <span style={{ fontSize: '11px', fontWeight: 'bold', marginBottom: '5px' }}>1,000*</span>
+      <div style={{ width: '100%', backgroundColor: '#1d4ed8', height: '20px', borderRadius: '4px 4px 0 0' }}></div>
       <span style={{ fontSize: '10px', marginTop: '8px', textAlign: 'center' }}>'70 (Redev)</span>
     </div>
 
-    {/* 2000 Census: 7,501 (approx 77% of max) */}
+    {/* 2000 Census: 7,501 (150px) */}
     <div style={{ flex: 1, display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
-      <span style={{ fontSize: '10px', fontWeight: 'bold', marginBottom: '4px' }}>7,501</span>
-      <div style={{ width: '100%', backgroundColor: '#1d4ed8', height: '77%', borderRadius: '4px 4px 0 0' }}></div>
+      <span style={{ fontSize: '11px', fontWeight: 'bold', marginBottom: '5px' }}>7,501</span>
+      <div style={{ width: '100%', backgroundColor: '#1e40af', height: '150px', borderRadius: '4px 4px 0 0' }}></div>
       <span style={{ fontSize: '12px', marginTop: '8px' }}>2000</span>
     </div>
 
-    {/* 2020: 9,718 (100% height) */}
+    {/* 2020: 9,718 (200px) */}
     <div style={{ flex: 1, display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
-      <span style={{ fontSize: '10px', fontWeight: 'bold', marginBottom: '4px' }}>9,718</span>
-      <div style={{ width: '100%', backgroundColor: '#1e3a8a', height: '100%', borderRadius: '4px 4px 0 0' }}></div>
+      <span style={{ fontSize: '11px', fontWeight: 'bold', marginBottom: '5px' }}>9,718</span>
+      <div style={{ width: '100%', backgroundColor: '#1e3a8a', height: '200px', borderRadius: '4px 4px 0 0' }}></div>
       <span style={{ fontSize: '12px', marginTop: '8px' }}>2020</span>
     </div>
 
   </div>
 
-  <p style={{ fontSize: '11px', color: '#64748b', marginTop: '20px', fontStyle: 'italic' }}>
-    *Portion of the 1970 population located in re-developable areas. Source: EIS Document & Wikipedia.
+  <p style={{ fontSize: '12px', color: '#64748b', marginTop: '20px', fontStyle: 'italic', lineHeight: '1.5' }}>
+    *Portion of the 1970 population located in re-developable areas. <br />
+    Source: EIS Document & Wikipedia.
   </p>
 </div>
 
-## Experimenting with bar graphs round 5; interactive 
-
-<div style={{ margin: '40px 0', fontFamily: 'sans-serif' }}>
-  <style>{`
-    .bar-group:hover .bar-fill { background-color: #1d4ed8 !callout; }
-    .bar-group:hover .tooltip { opacity: 1; transform: translateY(-5px); }
-  `}</style>
-
-  <div style={{ display: 'flex', alignItems: 'flex-end', height: '250px', gap: '20px' }}>
-    
-    {/* Example Bar with Hover Tooltip */}
-    <div className="bar-group" style={{ flex: 1, position: 'relative', display: 'flex', flexDirection: 'column', alignItems: 'center', cursor: 'pointer' }}>
-      <div className="tooltip" style={{ 
-        position: 'absolute', top: '-40px', backgroundColor: '#333', color: '#fff', padding: '4px 8px', 
-        borderRadius: '4px', fontSize: '10px', opacity: 0, transition: '0.3s', pointerEvents: 'none' 
-      }}>
-        Pop: 9,718 (Source: Wiki)
-      </div>
-      <div className="bar-fill" style={{ width: '100%', backgroundColor: '#3b82f6', height: '100%', borderRadius: '4px 4px 0 0', transition: '0.3s' }}></div>
-      <span style={{ fontSize: '12px', marginTop: '8px' }}>2020</span>
-    </div>
-
-  </div>
-</div>
 
 ## Experimenting with juxtapose
 
