--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -481,6 +481,95 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
         <text className="pie-data" x="16" y="17.5" transform="rotate(90 16 16)">30%</text>
       </g
 
+
+## v5 pie chart
+
+<div style={{ margin: '40px 0', fontFamily: 'sans-serif', maxWidth: '600px' }}>
+  <style>{`
+    .pie-trigger { display: none; }
+    .pie-data { 
+      opacity: 0; 
+      transition: opacity 0.3s ease; 
+      pointer-events: none; 
+      font-size: 5px; 
+      font-weight: bold;
+      text-anchor: middle;
+      fill: #1e293b;
+    }
+    .pie-slice { cursor: pointer; transition: filter 0.3s ease, stroke-width 0.3s ease; }
+
+    #trig-c:checked ~ .g-c .pie-data { opacity: 1; }
+    #trig-c:checked ~ .g-c .pie-slice { filter: brightness(1.2); strokeWidth: 34; }
+    
+    #trig-b:checked ~ .g-b .pie-data { opacity: 1; }
+    #trig-b:checked ~ .g-b .pie-slice { filter: brightness(1.2); strokeWidth: 34; }
+
+    #trig-a:checked ~ .g-a .pie-data { opacity: 1; }
+    #trig-a:checked ~ .g-a .pie-slice { filter: brightness(1.2); strokeWidth: 34; }
+
+    #trig-d:checked ~ .g-d .pie-data { opacity: 1; }
+    #trig-d:checked ~ .g-d .pie-slice { filter: brightness(1.2); strokeWidth: 34; }
+  `}</style>
+
+  <div style={{ display: 'flex', alignItems: 'center', gap: '40px', flexWrap: 'wrap' }}>
+    <svg viewBox="0 0 32 32" style={{ width: '280px', height: '280px', borderRadius: '50%', transform: 'rotate(-90deg)', overflow: 'visible' }}>
+      
+      <foreignObject width="0" height="0">
+        <input type="checkbox" id="trig-c" className="pie-trigger" />
+        <input type="checkbox" id="trig-b" className="pie-trigger" />
+        <input type="checkbox" id="trig-a" className="pie-trigger" />
+        <input type="checkbox" id="trig-d" className="pie-trigger" />
+      </foreignObject>
+
+      {/* Category C - 40% */}
+      <g className="g-c">
+        <label htmlFor="trig-c">
+          <circle className="pie-slice" r="16" cx="16" cy="16" fill="transparent" stroke="#018571" strokeWidth="32" strokeDasharray="40 100" />
+        </label>
+        <text className="pie-data" x="16" y="17.5" transform="rotate(90 16 16)">40%</text>
+      </g>
+      
+      {/* Category B - 30% */}
+      <g className="g-b">
+        <label htmlFor="trig-b">
+          <circle className="pie-slice" r="16" cx="16" cy="16" fill="transparent" stroke="#A6611A" strokeWidth="32" strokeDasharray="30 100" strokeDashoffset="-40" />
+        </label>
+        <text className="pie-data" x="16" y="17.5" transform="rotate(90 16 16)">30%</text>
+      </g>
+      
+      {/* Category A - 20% */}
+      <g className="g-a">
+        <label htmlFor="trig-a">
+          <circle className="pie-slice" r="16" cx="16" cy="16" fill="transparent" stroke="#DFC27D" strokeWidth="32" strokeDasharray="20 100" strokeDashoffset="-70" />
+        </label>
+        <text className="pie-data" x="16" y="17.5" transform="rotate(90 16 16)">20%</text>
+      </g>
+      
+      {/* Category D - 10% */}
+      <g className="g-d">
+        <label htmlFor="trig-d">
+          <circle className="pie-slice" r="16" cx="16" cy="16" fill="transparent" stroke="#80CDC1" strokeWidth="32" strokeDasharray="10 100" strokeDashoffset="-90" />
+        </label>
+        <text className="pie-data" x="16" y="17.5" transform="rotate(90 16 16)">10%</text>
+      </g>
+
+      <circle r="6" cx="16" cy="16" fill="#ffffff" />
+    </svg>
+
+    <div style={{ flex: '1', minWidth: '200px' }}>
+      <p style={{ fontSize: '14px', color: '#64748b' }}>
+        <strong>Click a segment</strong> to toggle labels.
+      </p>
+      <ul style={{ listStyle: 'none', padding: 0, fontSize: '14px' }}>
+        <li style={{ marginBottom: '8px' }}><span style={{ color: '#018571' }}>■</span> Category C (40%)</li>
+        <li style={{ marginBottom: '8px' }}><span style={{ color: '#A6611A' }}>■</span> Category B (30%)</li>
+        <li style={{ marginBottom: '8px' }}><span style={{ color: '#DFC27D' }}>■</span> Category A (20%)</li>
+        <li style={{ marginBottom: '8px' }}><span style={{ color: '#80CDC1' }}>■</span> Category D (10%)</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 ## Experimenting with juxtapose
 
 <iframe 
