--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -275,7 +275,7 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   </div>
 </div>
 
-## pie chart but interactive 
+## pie chart v1 
 
 <div style={{ margin: '40px 0', fontFamily: 'sans-serif', maxWidth: '500px' }}>
   <style>{`
@@ -337,7 +337,7 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   </div>
 </div>
 
-## Experimenting v3 pie chart
+## Pie chart v2
 
 <div style={{ margin: '40px 0', fontFamily: 'sans-serif', maxWidth: '600px' }}>
   <style>{`
@@ -417,7 +417,7 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
 </div>
 
 
-## Experimenting with interactive pie chart 
+## Pie chart v3  
 <div style={{ margin: '40px 0', fontFamily: 'sans-serif', maxWidth: '600px' }}>
   <style>{`
     /* Hide the actual checkboxes */
@@ -525,6 +525,8 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   height="360" 
   src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=f17863b2-fd53-11f0-ba1b-0e6f42328d7d"
 ></iframe>
+
+## Juxtapose on Loring Park archival photos 
 
 <iframe 
 frameborder="0" 
