--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -516,6 +516,79 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   </div>
 </div>
 
+## pie chart v5
+
+{/* Loring Park Pie Chart - Canopy Optimized */}
+<div id="loring-pie-container" style={{ margin: '60px 0', fontFamily: 'sans-serif' }}>
+  <style>{`
+    #loring-pie-container .pie-chart {
+      width: 250px;
+      height: 250px;
+      border-radius: 50%;
+      position: relative;
+      /* The Palette: #018571 (40%), #A6611A (30%), #DFC27D (20%), #80CDC1 (10%) */
+      background: conic-gradient(
+        #018571 0% 40%, 
+        #A6611A 40% 70%, 
+        #DFC27D 70% 90%, 
+        #80CDC1 90% 100%
+      );
+      transition: transform 0.3s ease;
+      cursor: pointer;
+    }
+    #loring-pie-container .pie-chart:hover { transform: scale(1.03); }
+    #loring-pie-container .legend-item { display: flex; align-items: center; margin-bottom: 12px; }
+    #loring-pie-container .swatch { width: 14px; height: 14px; border-radius: 3px; margin-right: 12px; }
+    #loring-pie-container .value-label { opacity: 0; transition: 0.3s ease; font-weight: bold; color: #1e3a8a; }
+    #loring-pie-container .legend-item:hover .value-label { opacity: 1; }
+  `}</style>
+
+  <h3 style={{ fontSize: '1.5rem', fontWeight: 'bold', marginBottom: '40px' }}>
+    Loring Park Demographic Breakdown
+  </h3>
+
+  <div style={{ display: 'flex', alignItems: 'center', gap: '50px', flexWrap: 'wrap' }}>
+    
+    {/* The Pie Chart itself (pure CSS) */}
+    <div className="pie-chart"></div>
+
+    {/* The Legend (Interactive) */}
+    <div style={{ flex: 1, minWidth: '200px' }}>
+      <p style={{ fontSize: '14px', color: '#64748b', marginBottom: '20px' }}>
+        Hover over labels to reveal data percentages.
+      </p>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#018571' }}></div>
+        <span style={{ fontSize: '15px' }}>Category C: </span>
+        <span className="value-label" style={{ marginLeft: '8px' }}> 40%</span>
+      </div>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#A6611A' }}></div>
+        <span style={{ fontSize: '15px' }}>Category B: </span>
+        <span className="value-label" style={{ marginLeft: '8px' }}> 30%</span>
+      </div>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#DFC27D' }}></div>
+        <span style={{ fontSize: '15px' }}>Category A: </span>
+        <span className="value-label" style={{ marginLeft: '8px' }}> 20%</span>
+      </div>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#80CDC1' }}></div>
+        <span style={{ fontSize: '15px' }}>Category D: </span>
+        <span className="value-label" style={{ marginLeft: '8px' }}> 10%</span>
+      </div>
+    </div>
+  </div>
+
+  <p style={{ fontSize: '12px', color: '#64748b', marginTop: '25px', fontStyle: 'italic' }}>
+    Data visual based on current Loring Park projections. [Source: EIS]
+  </p>
+</div>
+
 ## Experimenting with juxtapose
 
 <iframe 
