--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -589,6 +589,86 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   </p>
 </div>
 
+## Pie chart v6
+
+{/* Loring Park Pie Chart - High-Stability Canopy Version */}
+<div id="loring-pie-stable" style={{ margin: '60px 0', fontFamily: 'sans-serif' }}>
+  <style>{`
+    #loring-pie-stable .pie-chart {
+      width: 250px;
+      height: 250px;
+      border-radius: 50%;
+      /* Palette: #018571 (40%), #A6611A (30%), #DFC27D (20%), #80CDC1 (10%) */
+      background: conic-gradient(
+        #018571 0% 40%, 
+        #A6611A 40% 70%, 
+        #DFC27D 70% 90%, 
+        #80CDC1 90% 100%
+      );
+      transition: transform 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    #loring-pie-stable .pie-chart:hover { transform: scale(1.03); }
+    #loring-pie-stable .legend-item { 
+      display: flex; 
+      align-items: center; 
+      margin-bottom: 12px; 
+      cursor: pointer;
+      padding: 4px;
+      border-radius: 4px;
+      transition: background 0.2s;
+    }
+    #loring-pie-stable .legend-item:hover { background: #f8fafc; }
+    #loring-pie-stable .swatch { width: 14px; height: 14px; border-radius: 3px; margin-right: 12px; }
+    
+    /* The Fix: Always show, but highlight on hover */
+    #loring-pie-stable .value-label { 
+      margin-left: auto; 
+      font-weight: bold; 
+      color: #94a3b8; /* Dim grey by default */
+      transition: color 0.3s;
+    }
+    #loring-pie-stable .legend-item:hover .value-label { 
+      color: #1e3a8a; /* Bright blue on hover */
+    }
+  `}</style>
+
+  <h3 style={{ fontSize: '1.5rem', fontWeight: 'bold', marginBottom: '30px' }}>
+    Loring Park Demographic Breakdown
+  </h3>
+
+  <div style={{ display: 'flex', alignItems: 'center', gap: '40px', flexWrap: 'wrap' }}>
+    
+    <div className="pie-chart"></div>
+
+    <div style={{ flex: 1, minWidth: '220px' }}>
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#018571' }}></div>
+        <span style={{ fontSize: '15px' }}>Category C</span>
+        <span className="value-label">40%</span>
+      </div>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#A6611A' }}></div>
+        <span style={{ fontSize: '15px' }}>Category B</span>
+        <span className="value-label">30%</span>
+      </div>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#DFC27D' }}></div>
+        <span style={{ fontSize: '15px' }}>Category A</span>
+        <span className="value-label">20%</span>
+      </div>
+
+      <div className="legend-item">
+        <div className="swatch" style={{ backgroundColor: '#80CDC1' }}></div>
+        <span style={{ fontSize: '15px' }}>Category D</span>
+        <span className="value-label">10%</span>
+      </div>
+    </div>
+  </div>
+</div>
+
 ## Experimenting with juxtapose
 
 <iframe 
