--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -544,7 +544,7 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   `}</style>
 
   <h3 style={{ fontSize: '1.5rem', fontWeight: 'bold', marginBottom: '40px' }}>
-    Loring Park v5
+    Loring Park Redevelopment Project
   </h3>
 
   <div style={{ display: 'flex', alignItems: 'center', gap: '50px', flexWrap: 'wrap' }}>
